--- a/templates/QR_output.html
+++ b/templates/QR_output.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Image</title>
+    <title>Your QR code</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/QR_output.css')}}">
+    <script src="{{url_for('static', filename='/QR_output.js')}}"></script>
 </head>
 <body>
-    <img id="picture" src="data:image/png;base64,{{ img_data }}">
+    <div class='resizable'>
+        <img src="data:image/png;base64,{{ img_data }}" alt=""/>
+    </div>
 </body>
 </html>
