fix years old bug to make deploy go smoothly

--- a/templates/QR_output.html
+++ b/templates/QR_output.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your QR code</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='/QR_output.css')}}">
-    <script src="{{url_for('static', filename='/QR_output.js')}}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='QR_output.css')}}">
+    <script src="{{url_for('static', filename='QR_output.js')}}"></script>
 </head>
 <body>
     <div class='resizable'>
