--- a/templates/make_product_code.html
+++ b/templates/make_product_code.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='/make_product_code.css')}}">
-    <script src="{{url_for('static', filename='/make_product_code.js')}}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='make_product_code.css')}}">
+    <script src="{{url_for('static', filename='make_product_code.js')}}"></script>
 </head>
     <form action="{{ url_for('code') }}" method="post" class="form">
         <div class="title">Welcome</div>
